--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    padding: 40px 100px;
+    padding: 30px 100px;
     z-index: 1000;
     display: flex;
     align-items: center;
@@ -43,6 +43,11 @@
     cursor: pointer;
 }
 
+header > h2 {
+    display: flex;
+    align-items: center;
+    text-align: center;
+}
 
 
 .toggle {
@@ -83,21 +88,25 @@
     opacity: 0.6;
 }
 
+#red-mavrick {
+    color:red;
+}
+
 .text {
     position: relative;
     z-index: 10;
 }
 
 .text h2{
-    font-size: 5em;
-    font-weight: 800;
+    font-size: 4em;
+    font-weight: 700;
     line-height: 1em;
     text-transform: uppercase;
 }
 
 .text h3{
-    font-size: 4em;
-    font-weight: 700;
+    font-size: 3em;
+    font-weight: 600;
     line-height: 1em;
     text-transform: uppercase;
 }
@@ -119,18 +128,16 @@
     margin-top: 10px;
     text-transform: uppercase;
     letter-spacing: 2px;
-    transition: 0.2s;
 
 }
 
 .text a:hover {
-    letter-spacing: 6px;
-
+    background-color: red;
 }
 
 .social {
     position: absolute;
-    bottom: 20px;
+    bottom: 15px;
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -139,6 +146,7 @@
 
 .social li{
     list-style: none;
+    
 }
 
 .social li a {
@@ -167,6 +175,10 @@
 .menu ul{
     position: relative;
     list-style: none;
+}
+
+.menu li {
+    padding-top: 2em;
 }
 
 .menu ul li a{
