--- a/style.css
+++ b/style.css
@@ -1,212 +1,384 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+.showcase {
+  right: 0;
+  width: 100%;
+  min-height: 100vh;
+  padding: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #111;
+  color: #fff;
+  z-index: 2;
+  transition: 0.5s;
+}
+
+.showcase.active {
+  right: 300px;
+}
+
+.showcase header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  padding: 30px 100px;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.logo {
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+header > h2 {
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+.toggle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: url("images/hamburger_menu_icon.png");
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+}
+
+.toggle .menu {
+  display: none;
+}
+
+.toggle.active {
+  background: url("images/x_icon.png");
+  background-repeat: no-repeat;
+  background-size: 25px;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.toggle.active .menu {
+  display: block;
+  margin: 50px 0 0 0;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #2c2c2e;
+  mix-blend-mode: overlay;
+}
+
+.showcase video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  opacity: 0.6;
+}
+
+#red-mavrick {
+  color: red;
+}
+
+.text {
+  position: relative;
+  z-index: 10;
+}
+
+.text h2 {
+  font-size: 4em;
+  font-weight: 700;
+  line-height: 1em;
+  text-transform: uppercase;
+}
+
+.text h3 {
+  font-size: 3em;
+  font-weight: 600;
+  line-height: 1em;
+  text-transform: uppercase;
+}
+
+.text p {
+  font-size: 1.1em;
+  margin: 20px 0;
+  font-weight: 400;
+  max-width: 600px;
+}
+
+.text a {
+  display: inline-block;
+  font-size: 1em;
+  background: #fff;
+  padding: 10px 30px;
+  text-decoration: none;
+  color: #111;
+  margin-top: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+}
+
+.text a:hover {
+  background-color: red;
+}
+
+.social {
+  position: absolute;
+  bottom: 15px;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.social li {
+  list-style: none;
+}
+
+.social li a {
+  display: inline-block;
+  /* filter: invert(1); */
+  transform: scale(0.8);
+  transition: 0.5s;
+}
+
+.social li a:hover {
+  transform: scale(0.8) translateY(-15px);
+}
+
+.menu {
+  width: 300px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu ul {
+  position: relative;
+  list-style: none;
+}
+
+.menu li {
+  padding: 3em 0;
+}
+
+.menu ul li a {
+  text-decoration: none;
+  font-size: 24px;
+  color: #fff;
+}
+
+.menu ul li a:hover {
+  color: red;
+}
+
+.about_mavrick_cinematics {
+  width: 100vh;
+  min-height: 30vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #fff;
+  z-index: 100;
+  clear: inherit;
+}
+
+/*contact form css */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap');
 
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
 
-.showcase {
-    position: absolute;
-    right: 0;
-    width: 100%;
-    min-height: 100vh;
-    padding: 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: #111;
-    color: #fff;
-    z-index: 2;
-    transition: 0.5s;
-}
-
-.showcase.active {
-    right: 300px
-}
-
-.showcase header {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    padding: 30px 100px;
+.contact-section {
+    background: url(images/contact_bg.jpg) no-repeat center;
+    background-size: cover;
+    padding: 40px 0;
     z-index: 1000;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.logo {
-    text-transform: uppercase;
-    cursor: pointer;
-}
-
-header > h2 {
-    display: flex;
-    align-items: center;
-    text-align: center;
-}
-
-
-.toggle {
-    position: relative;
-    width: 60px;
-    height: 60px;
-    background: url('images/hamburger_menu_icon.png');
-    background-repeat: no-repeat;
-    background-size: 30px;
-    background-position: center;
-    cursor: pointer;
-}
-
-.toggle.active {
-    background: url('images/x_icon.png');
-    background-repeat: no-repeat;
-    background-size: 25px;
-    background-position: center;
 }
 
 .overlay {
     position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     background: #2C2C2E;
     mix-blend-mode: overlay;
-}
-
-.showcase video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
     opacity: 0.6;
-}
+    z-index: 10;
+} 
 
 #red-mavrick {
     color:red;
 }
 
-.text {
-    position: relative;
-    z-index: 10;
+.contact-section h1{
+    text-align: center;
+    color: #fff;
 }
 
-.text h2{
-    font-size: 4em;
-    font-weight: 700;
-    line-height: 1em;
-    text-transform: uppercase;
-}
-
-.text h3{
-    font-size: 3em;
-    font-weight: 600;
-    line-height: 1em;
-    text-transform: uppercase;
-}
-
-.text p {
-    font-size: 1.1em;
-    margin: 20px 0;
-    font-weight: 400;
-    max-width: 600px;
-}
-
-.text a {
-    display: inline-block;
-    font-size: 1em;
+.border{
+    width: 600px;
+    height: 2px;
     background: #fff;
-    padding: 10px 30px;
-    text-decoration: none;
-    color: #111;
-    margin-top: 10px;
-    text-transform: uppercase;
-    letter-spacing: 2px;
+    margin: 20px auto;
 
 }
 
-.text a:hover {
-    background-color: red;
+.contact-form {
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10px;
+    overflow: hidden;
+
 }
 
-.social {
-    position: absolute;
-    bottom: 15px;
-    z-index: 10;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.social li{
-    list-style: none;
-    
-}
-
-.social li a {
-    display: inline-block;
-    /* filter: invert(1); */
-    transform: scale(0.8);
+.contact-form-text{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 0;
+    background: #111;
+    padding: 20px 40px;
+    outline: none;
+    color: #ddd;
     transition: 0.5s;
 }
 
-.social li a:hover{
-    transform: scale(0.8) translateY(-15px);
-
+.contact-form-text:focus{
+    box-shadow: 0 0 10px 4px #34495e;
 }
 
-.menu {
+textarea.contact-form-text{
+    resize: none;
+    height: 120px;
+}
+
+.contact-form-btn{
+    float: right;
+    border: 0;
+    background: #34495e;
+    color: #fff;
+    padding: 12px 50px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+
+.contact-form-btn:hover{
+    background: #2980b9;
+}
+
+.footer{
     position: absolute;
-    top:0;
-    right: 0;
-    width: 300px;
-    height: 100%;
+    background-color: #111;
+    height: auto;
+    width: 100vw;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 20px;
+    color: #fff;
+    z-index: 1000;
+}
+
+.footer-content{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+    text-align: center;
 }
 
-.menu ul{
-    position: relative;
+.footer-content h3{
+    font-size: 1.8rem;
+    font-weight: 400;
+    text-transform: capitalize;
+    line-height: 2rem;
+}
+
+.footer-content p{
+    max-width: 500px;
+    margin: 10px auto;
+    line-height: 28px;
+    font-size: 14px;
+}
+
+.socials{
     list-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 1rem 0 3rem 0;
 }
 
-.menu li {
-    padding-top: 2em;
+.socials li{
+    margin: 0 10px;
+
 }
 
-.menu ul li a{
+.socials a{
     text-decoration: none;
-    font-size: 24px;
-    color: #111;
+    color: #fff;
 }
 
-.menu ul li a:hover{
+.socials a i{
+    font-size: 1.1rem;
+    transition: color .4s ease;
+}
+
+.socials a:hover i{
     color: red;
 }
 
+.footer-bottom{
+    background-color: #111;
+    width: 100vw;
+    padding: 0 0 25px 0;
+    text-align: center;
+}
+
+.footer-bottom p{
+    word-spacing: 2px;
+    text-transform: capitalize;
+}
 
 
 
 /* Media Queries Section Below  */
 
-@media(max-width: 798px){
-    .showcase,
-    .showcase header {
-        padding: 40px;
-    }
+@media (max-width: 798px) {
+  .showcase,
+  .showcase header {
+    padding: 40px;
+  }
 
-    .text h2{
-        font-size: 3em;
-    }
+  .text h2 {
+    font-size: 3em;
+  }
 
-    .text h3 {
-        font-size: 2em;
-    }
+  .text h3 {
+    font-size: 2em;
+  }
 }
